# FastOCR

./: .gitignore  AppImageBuilder.yml  README.md  build.spec  crowdin.yml  index.md  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci_tests.yml  release.yml
fast_ocr/: __main__.py  grabber.py  service.py  util.py
fastocr/: __init__.py  __main__.py  base.py  bus.py  consts.py  grabber.py  i18n.py  log.py  service.py  setting.py  tray.py  util.py
fastocr/data/: FastOCR.desktop  config.example.ini  i18n.pro  introspection.xml
fastocr/i18n/: en.ts  ja_JP.ts  zh_CN.qm  zh_CN.ts  zh_cn.qm  zh_cn.ts
fastocr/qml/: main.qml  setting.qml
fastocr/qml/component/: About.qml  ActionWizard.qml  Actions.qml  Setting.qml
fastocr/qml/dummydata/: backend.qml
tests/: test_qt.py  test_setting.py  test_util.py
