[project]
name = "fastocr"
version = "0.3.8"
description = "FastOCR is a desktop application for OCR API."
readme = "README.md"
requires-python = ">=3.11,<3.15"
license = { file = "LICENSE" }
authors = [{ name = "Bruce Zhang", email = "zttt183525594@gmail.com" }]
keywords = ["ocr"]
urls = { homepage = "https://github.com/BruceZhang1993/FastOCR", repository = "https://github.com/BruceZhang1993/FastOCR", documentation = "https://github.com/BruceZhang1993/FastOCR" }
dependencies = [
    "PyQt6",
    "aiohttp",
    "click",
    "qasync",
    "dbus-next; sys_platform == 'linux'",
]

[project.scripts]
fastocr = "fastocr.__main__:main"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pyinstaller>=6.15.0",
    "appimage-builder; sys_platform == 'linux'",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["fastocr*"]

[tool.setuptools.package-data]
fastocr = [
    "qml/*.qml",
    "qml/component/*.qml",
    "data/FastOCR.desktop",
    "data/config.example.ini",
    "data/i18n.pro",
    "data/*.xml",
    "i18n/*.qm",
    "resource/icon/*/*.svg",
    "resource/icon/*/*.png",
]
